--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: flutter_template
-description: A new Flutter package.
+description: Template of some commonly used widgets.
 version: 0.0.1
-author:
-homepage:
+author: Honghm<17520526@gm.uit.edu.vn>
+homepage: https://github.com/Honghm/flutter_template
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
