--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: flutter_template
 description: Template of some commonly used widgets.
 version: 0.0.1
-author: Honghm<17520526@gm.uit.edu.vn>
+#author: Honghm<17520526@gm.uit.edu.vn>
 homepage: https://github.com/Honghm/flutter_template
 
 environment:
