--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_template
 description: Template of some commonly used widgets.
-version: 0.0.4
+version: 0.0.5
 #author: Honghm<17520526@gm.uit.edu.vn>
 homepage: https://github.com/Honghm/flutter_template
 
@@ -11,6 +11,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  wechat_camera_picker: ^2.1.0
+  wechat_assets_picker: ^5.5.5
+  extended_image: ^4.0.0
+  path: ^1.8.0
+  path_provider: ^2.0.1
+  provider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
