--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_template:
     path: ../
-  flutter_screenutil: ^5.0.0
+  flutter_screenutil: ^5.0.0+2
 dev_dependencies:
   flutter_test:
     sdk: flutter
