--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_template
 description: Template of some commonly used widgets.
-version: 0.1.3
+version: 0.1.4
 #author: Honghm<17520526@gm.uit.edu.vn>
 homepage: https://github.com/Honghm/flutter_template
 
@@ -17,6 +17,7 @@ dependencies:
   path: ^1.8.0
   path_provider: ^2.0.1
   provider: ^5.0.0
+  flutter_screenutil: ^5.0.0+2
 
 dev_dependencies:
   flutter_test:
