--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: flutter_modules
 description: Template of some commonly used widgets.
-version: 0.0.2
+version: 0.0.3
 homepage: https://github.com/Covisoft/flutter_modules
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.13.0 <3.0.0"
   flutter: ">=1.17.0"
 
 dependencies:
@@ -24,18 +24,22 @@ dependencies:
   libphonenumber_plugin: ^0.2.3
   equatable: ^2.0.3
   collection: ^1.15.0
+  uuid: 
+  camera:
+  photo_manager:
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  very_good_analysis: ^2.1.2
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter.
 flutter:
-
+  uses-material-design: true
   # To add assets to your package, add an assets section, like this:
-   assets:
+  assets:
      - assets/flags/
   #   - images/a_dot_ham.jpeg
   #
@@ -50,7 +54,13 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
+  fonts:
+    - family: CustomIcons
+      fonts:
+      - asset: assets/fonts/CustomIcons.ttf
+    - family: ShapeIcons
+      fonts:
+        - asset: assets/fonts/ShapeIcons.ttf
   #   - family: Schyler
   #     fonts:
   #       - asset: fonts/Schyler-Regular.ttf
