--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_modules
 description: Template of some commonly used widgets.
-version: 0.0.3
+version: 0.0.4
 homepage: https://github.com/Covisoft/flutter_modules
 
 environment:
@@ -24,9 +24,9 @@ dependencies:
   libphonenumber_plugin: ^0.2.3
   equatable: ^2.0.3
   collection: ^1.15.0
-  uuid: 
-  camera:
-  photo_manager:
+  uuid: ^3.0.5 
+  camera: ^0.9.4+5
+  photo_manager: ^1.3.10
 
 dev_dependencies:
   flutter_test:
