--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_modules
 description: Template of some commonly used widgets.
-version: 0.0.5
+version: 0.0.6
 homepage: https://github.com/Covisoft/flutter_modules
 
 environment:
@@ -14,13 +14,13 @@ dependencies:
     git:
       url: https://github.com/Honghm/flutter_packages
       path: intl_phone_number_input
-  wechat_camera_picker: any
-  wechat_assets_picker: any
+#  wechat_camera_picker: any
+#  wechat_assets_picker: any
   extended_image: any
   path: ^1.8.0
   path_provider: any
   provider: any
-  flutter_screenutil: ^5.0.0+2
+  flutter_screenutil: ^5.0.1
   libphonenumber_plugin: ^0.2.3
   equatable: ^2.0.3
   collection: ^1.15.0
@@ -28,7 +28,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  very_good_analysis: ^2.1.2
+  very_good_analysis: ^2.4.0
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
