--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_modules
 description: Template of some commonly used widgets.
-version: 0.0.6
+version: 0.0.7
 homepage: https://github.com/Covisoft/flutter_modules
 
 environment:
@@ -16,6 +16,10 @@ dependencies:
       path: intl_phone_number_input
 #  wechat_camera_picker: any
 #  wechat_assets_picker: any
+  # likk_picker:
+  #   git:
+  #     url: https://github.com/hunghuy201280/likk_picker
+  
   extended_image: any
   path: ^1.8.0
   path_provider: any
@@ -24,6 +28,14 @@ dependencies:
   libphonenumber_plugin: ^0.2.3
   equatable: ^2.0.3
   collection: ^1.15.0
+  uuid: ^3.0.4
+  photo_manager: ^1.3.1
+  camera: 0.9.1
+  # camera:
+  #   git:
+  #     url: https://github.com/flutter/plugins
+  #     path: packages/camera/camera
+  #     ref: main
 
 dev_dependencies:
   flutter_test:
@@ -34,6 +46,8 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
+
+  uses-material-design: true
  # To add assets to your package, add an assets section, like this:
   assets:
      - assets/flags/
@@ -50,7 +64,13 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
- 
+  fonts:
+    - family: CustomIcons
+      fonts:
+        - asset: assets/fonts/CustomIcons.ttf
+    - family: ShapeIcons
+      fonts:
+        - asset: assets/fonts/ShapeIcons.ttf
   #   - family: Schyler
   #     fonts:
   #       - asset: fonts/Schyler-Regular.ttf
