--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -30,7 +30,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   flutter_modules:
     path: ../
- 
+  flutter_bloc: ^7.3.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
