--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_modules
 description: Template of some commonly used widgets.
-version: 0.0.9
+version: 0.0.10
 homepage: https://github.com/Covisoft/flutter_modules
 
 environment:
@@ -14,12 +14,7 @@ dependencies:
     git:
       url: https://github.com/Honghm/flutter_packages
       path: intl_phone_number_input
-#  wechat_camera_picker: any
-#  wechat_assets_picker: any
-  # likk_picker:
-  #   git:
-  #     url: https://github.com/hunghuy201280/likk_picker
-  
+
   extended_image: any
   path: ^1.8.0
   path_provider: any
@@ -31,12 +26,8 @@ dependencies:
   uuid: ^3.0.4
   photo_manager: ^1.3.1
   camera: 0.9.1
-  # camera:
-  #   git:
-  #     url: https://github.com/flutter/plugins
-  #     path: packages/camera/camera
-  #     ref: main
-
+  another_flushbar: ^1.10.24
+  flutter_bloc: ^7.3.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
