--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,24 +10,38 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+    
+  another_flushbar: ^1.10.24
+
+  camera: 0.9.1
+  collection: ^1.15.0
+
+  dio: ^4.0.0
+  equatable: ^2.0.3
+  extended_image: any
+ 
+
+  flutter_bloc: ^7.3.1
+  flutter_screenutil: ^5.0.1
+  flutter_svg: ^0.22.0
+
+  google_fonts: ^2.0.0
+
   intl_phone_number_input:
     git:
       url: https://github.com/Honghm/flutter_packages
       path: intl_phone_number_input
 
-  extended_image: any
+  libphonenumber_plugin: ^0.2.3
+
   path: ^1.8.0
   path_provider: any
   provider: any
-  flutter_screenutil: ^5.0.1
-  libphonenumber_plugin: ^0.2.3
-  equatable: ^2.0.3
-  collection: ^1.15.0
-  uuid: ^3.0.4
   photo_manager: ^1.3.1
-  camera: 0.9.1
-  another_flushbar: ^1.10.24
-  flutter_bloc: ^7.3.1
+  
+ 
+  uuid: ^3.0.4
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
